chore: add profile picture support
